--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>That little wardrobe</title>
-	<link rel="stylesheet" type="text/css" href="../bootsrap-3.3.7-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="yxhxi.css">
 	<link rel="stylesheet" type="text/css" href="yxhxi.css">
 	<body style="background-color: #e0a3c9">
