--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 <br>
 
-	<img src="HTML/pic1.jpg">
-	<background-image: url("../HTML/pic1.jpg)>
+	<img src="pic1.jpg">
+	<background-image: url("pic1.jpg)>
 
 
 </div>	
