--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <br>
 	
 	<div class="about" align="center">
-		<img src="HTML/pic2.jpg" height="150" width="150">
+		<img src="pic2.jpg" height="150" width="150">
 		<img class="img-responsive"> <br>
 			<font face="Verdana" size="5">Yuhui Chu</font><br>
 			<br>
