--- a/yxhxi.html
+++ b/yxhxi.html
@@ -4,7 +4,6 @@
 	<title>That little wardrobe</title>
 	<link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="yxhxi.css">
-	<link rel="stylesheet" type="text/css" href="yxhxi.css">
 	<body style="background-color: #e0a3c9">
 </head>
 
@@ -32,7 +31,7 @@
 		</div>
 
 		<div class="col-sm-3">
-			<li><a href="Accessories.asp">Accessories</a></li>
+			<li><a href="Accessories.html">Accessories</a></li>
 		</div>
 	</ul>
 </div>
@@ -60,11 +59,11 @@
 				</div>
 				
 				
-				</div>
-
 			</div>
+
 		</div>
 	</div>
+</div>
 
 
 
