--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>That little wardrobe</title>
-	<link rel="stylesheet" type="text/css" href="../bootsrap-3.3.7-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="yxhxi.css">
 	<body style="background-color: #e0a3c9">
 
@@ -14,7 +14,7 @@
 	<li><a href="yxhxi.html">Home</a></li>
 	<li><a href="about.html">About</a></li>
 	<li><a href="Clothes.html">Clothes</a></li>
-	<li><a href="Accessories.asp">Accessories</a></li>
+	<li><a href="Accessories.html">Accessories</a></li>
 </ul>
 
 <br>
