--- a/yxhxi.html
+++ b/yxhxi.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 
+  <title>That little wardrobe</title>  
+  
 </head>
 
 </html>
+
+<body>
+  
+  <img src="pic1.jpg">
+  
+</body>
