--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   
-  <h1 font align="center" type="verbana">That little wardrobe</h1>
+  <h1>That little wardrobe</h1>
   <img src="pic1.jpg">
   
 </body>
