--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   
 </head>
 
-</html>
-
 <body>
   
-  <h1>That little wardrobe</h1>
-  <img src="pic1.jpg">
+  <h1 font align="center" type="verbana" font size="75px">That little wardrobe</h1>
+  <img src="pic1.jpg" align="middle>
   
 </body>
+
+                             
+</html>
