--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   
-  <h1 font align="center" type="verbana" font size="75px">That little wardrobe</h1>
-  <img src="pic1.jpg" align="middle>
+  <h1>That little wardrobe</h1>
+  <img src="pic1.jpg">
   
 </body>
 
