--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
   
   <ul class="nav nav-tabs">
-    <li role="presentation"><a href="index.html">Home</a></li>
-    <li role="presentation"><a href="About.html">About</a></li>
-    <li role="presentation"><a href="Clothes.html">Clothes</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="About.html">About</a></li>
+    <li><a href="Clothes.html">Clothes</a></li>
+    <li><a href="Accessories.html>Accessories</a><li>
   </ul>
   
   <h1>That little wardrobe</h1>
