--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 
   <title>That little wardrobe</title>  
-  <link rel="stylesheet" type="text/css" href="../bootsrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   
 </head>
 
