--- a/about.html
+++ b/about.html
@@ -1,9 +1,26 @@
+<!Doctype html>
+<html>
+<head>
 
+  <title>That little wardrobe</title>  
+  <link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  
+</head>
 
 <body>
 
+   <ul class="nav nav-tabs">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="About.html">About</a></li>
+    <li><a href="Clothes.html">Clothes</a></li>
+    <li><a href="Accessories.html">Accessories</a><li>
+  </ul>
+  
   <img src="pic2.jpg">
   <h1>Yuhui Chu</h1>
   <h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
 
 </body>
+
+</html>
