--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
    <ul class="nav nav-tabs">
     <li><a href="index.html">Home</a></li>
-    <li><a href="About.html">About</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="Clothes.html">Clothes</a></li>
     <li><a href="Accessories.html">Accessories</a><li>
   </ul>
