--- a/about.html
+++ b/about.html
@@ -14,13 +14,12 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="Clothes.html">Clothes</a></li>
-    <li><a href="Accessories.html">Accessories</a><li>
+    <li><a href="Accessories.html">Accessories</a></li>
   </ul>
   
-  <img src="pic2.jpg">
+  <img src="pic2.jpg" height="150" width="150" img class="img-responsive>
   <h1>Yuhui Chu</h1>
   <h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
 
 </body>
-
 </html>
