--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
   <ul class="nav nav-tabs">
     <li><a href="index.html">Home</a></li>
-    <li><a href="About.html">About</a></li>
+    <li><a href="about.html">About</a></li>
     <li><a href="Clothes.html">Clothes</a></li>
-    <li><a href="Accessories.html">Accessories</a><li>
+    <li><a href="Accessories.html">Accessories</a></li>
   </ul>
   
   <h1>That little wardrobe</h1>
