--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
 
    <ul class="nav nav-tabs">
-    <li><a href="index.html">Home</a></li>
+    <li><a href="https://thatlittlewardrobe-chu.github.io/index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="Clothes.html">Clothes</a></li>
     <li><a href="Accessories.html">Accessories</a></li>
