--- a/about.html
+++ b/about.html
@@ -17,9 +17,10 @@
     <li><a href="Accessories.html">Accessories</a></li>
   </ul>
   
-  <img src="pic2.jpg" height="150" width="150">
-  <h1>Yuhui Chu</h1>
-  <h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
-
+  <div>
+    <img src="pic2.jpg" height="150" width="150">
+    <h1>Yuhui Chu</h1>
+    <h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
+  </div>
 </body>
 </html>
