--- a/Clothes.html
+++ b/Clothes.html
@@ -13,8 +13,8 @@
    <ul class="nav nav-tabs">
     <li><a href="https://thatlittlewardrobe-chu.github.io/index.html">Home</a></li>
     <li><a href="https://thatlittlewardrobe-chu.github.io/about.html">About</a></li>
-    <li><a href="Clothes.html">Clothes</a></li>
-    <li><a href="Accessories.html">Accessories</a></li>
+    <li><a href="https://thatlittlewardrobe-chu.github.io/Clothes.html">Clothes</a></li>
+    <li><a href="https://thatlittlewardrobe-chu.github.io/Accessories.html">Accessories</a></li>
   </ul>
   
   </body>
