--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
   
-  <ul class="nav nav-tabs">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="Clothes.html">Clothes</a></li>
-    <li><a href="Accessories.html">Accessories</a></li>
+ <ul class="nav nav-tabs">
+    <li><a href="https://thatlittlewardrobe-chu.github.io/index.html">Home</a></li>
+    <li><a href="https://thatlittlewardrobe-chu.github.io/about.html">About</a></li>
+    <li><a href="https://thatlittlewardrobe-chu.github.io/Clothes.html">Clothes</a></li>
+    <li><a href="https://thatlittlewardrobe-chu.github.io/Accessories.html">Accessories</a></li>
   </ul>
   
   <h1>That little wardrobe</h1>
