--- a/about.html
+++ b/about.html
@@ -22,5 +22,15 @@
     <h1>Yuhui Chu</h1>
     <h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
   </div>
+  
+  <div>
+	<font face="Verdana" size="3"> Contact me at: </font> <br>
+	<font face="Verdana" size="3"> &#9993 yuhuichu16@gmail.com </font></br>
+	<font face="Verdana" size="3">&#9742 +447506559589 </font></br>
+	<a href="https://www.facebook.com/whyuhui">My Facebook</a> 
+	<a href="https://www.instagram.com/yuhuiyy/">My Instagram</a>
+</div>
+
+  
 </body>
 </html>
