--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
     <li><a href="https://thatlittlewardrobe-chu.github.io/Accessories.html">Accessories</a></li>
   </ul>
   
+<br>
+<br>
+	
   <div>
     <img src="pic2.jpg" height="150" width="150">
     <h1>Yuhui Chu</h1>
@@ -27,7 +30,7 @@
 	<font face="Verdana" size="3"> Contact me at: </font> <br>
 	<font face="Verdana" size="3"> &#9993 yuhuichu16@gmail.com </font></br>
 	<font face="Verdana" size="3">&#9742 +447506559589 </font></br>
-	<a href="https://www.facebook.com/whyuhui">My Facebook</a> 
+	<a href="https://www.facebook.com/whyuhui">My Facebook</a> <br>
 	<a href="https://www.instagram.com/yuhuiyy/">My Instagram</a>
 </div>
 
