--- a/about.html
+++ b/about.html
@@ -20,11 +20,12 @@
 <br>
 <br>
 	
-  <div>
-    <img src="pic2.jpg" height="150" width="150">
-    <h1>Yuhui Chu</h1>
-    <h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
-  </div>
+  <div class="details">
+    <div>
+	<img src="pic2.jpg" height="150" width="150">
+    	<h1>Yuhui Chu</h1>
+    	<h2>A final year undergrad who want to share all her little things that is filling up her room. No I am not obsessed with pink. </h2>
+    </div>
   
   <div>
 	<font face="Verdana" size="3"> Contact me at: </font> <br>
@@ -32,8 +33,9 @@
 	<font face="Verdana" size="3">&#9742 +447506559589 </font></br>
 	<a href="https://www.facebook.com/whyuhui">My Facebook</a> <br>
 	<a href="https://www.instagram.com/yuhuiyy/">My Instagram</a>
-</div>
+  </div>
 
-  
+</div> 
+
 </body>
 </html>
