--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
   <title>That little wardrobe</title>  
   <link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  
+  <body style="background-color: #e0a3c9">
+	  
 </head>
 
 <body>
