--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
   
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
 	
   <div class="details">
     <div>
@@ -32,8 +36,8 @@
 	<font face="Verdana" size="3"> Contact me at: </font> <br>
 	<font face="Verdana" size="3"> &#9993 yuhuichu16@gmail.com </font></br>
 	<font face="Verdana" size="3">&#9742 +447506559589 </font></br>
-	<a href="https://www.facebook.com/whyuhui">My Facebook</a> <br>
-	<a href="https://www.instagram.com/yuhuiyy/">My Instagram</a>
+	<a class="link" href="https://www.facebook.com/whyuhui">My Facebook</a> <br>
+	<a class="link" href="https://www.instagram.com/yuhuiyy/">My Instagram</a>
   </div>
 
 </div> 
