--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>That little wardrobe</title>  
   <link rel="stylesheet" type="text/css" href="bootsrap-3.3.7-dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  
+  <body style="background-color: #e0a3c9">
+    
 </head>
 
 <body>
@@ -16,6 +17,12 @@
     <li><a href="https://thatlittlewardrobe-chu.github.io/Clothes.html">Clothes</a></li>
     <li><a href="https://thatlittlewardrobe-chu.github.io/Accessories.html">Accessories</a></li>
   </ul>
+ 
+ <br>
+  <br>
+  <br>
+  <br>
+  <br>
   
   <h1>That little wardrobe</h1>
   <img src="pic1.jpg">
