--- a/Clothes.html
+++ b/Clothes.html
@@ -32,6 +32,9 @@
         <div class="col-sm-4">
           <img src="pic8.jpg"> 
         <div/>
+       
+      </div>
+    </div>       
           
   
   
